gameStart function added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ label {
 
     width: 100px;
     height: 100px;
-    background: url("../images/crystal\ poodle.jpeg");
+    background: url("../images/poodle.jpeg");
     background-size: 100%;
     margin-left: 75px;
 }
